<resources>

    <string name="app_name">Huhutong</string>
    <string name="lottery">抽奖</string>
    <string name="lottery_unstart">抽奖活动，尚未开始，敬请期待</string>
    <string name="phone">手机号码 :</string>
    <string name="smartcard_id">智能卡号 :</string>
    <string name="std_id">机顶盒号 :</string>
    <string name="submit">提交</string>
    <string name="televison">看电视</string>
    <string name="radio">广播</string>
    <string name="comprehensive">直播星服务</string>
    <string name="fuctionbar">功能栏</string>
    <string name="sinawall">新浪微博墙</string>
    <string name="onlineask">在线咨询</string>
    <string name="complex">综合</string>
    <string name="wall">微博墙</string>
    <string name="newscenter">新闻中心</string>
    <string name="enginguide">工程指南</string>
    <string name="techsupport">技术支持</string>
    <string name="map">地图</string>
</resources>
