<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
     >
     <RelativeLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/title"
         >
        <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/TitleText"
             android:text="@string/lottery"
             android:layout_centerInParent="true"
              />
         
         <ImageButton
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="5dp"
             android:layout_centerVertical="true"
             android:contentDescription="@string/app_name"
             style="@style/BackButton"
              />

        
     </RelativeLayout>

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="@string/lottery_unstart"
         android:textSize="@dimen/LargeTextSize"
         android:padding="5dp"
          />

     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
          >

          <TextView
              android:id="@+id/phone_t"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="right"
              style="@style/lottery_text"
              android:layout_marginLeft="8dp"
              android:text="@string/phone"
               />
          <EditText 
              android:id="@+id/phone_e"
              android:layout_marginLeft="5dp"
              android:layout_toRightOf="@id/phone_t"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="phone"
              android:layout_marginRight="8dp"
              />
     </RelativeLayout>

     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:layout_marginTop="20dp"
         >
         <TextView
              android:id="@+id/smartcard_t"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="right"
              style="@style/lottery_text"
              android:layout_marginLeft="8dp"
              android:text="@string/smartcard_id"
               />
          <EditText 
              android:id="@+id/smartcard_e"
              android:layout_marginLeft="5dp"
              android:layout_toRightOf="@id/smartcard_t"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="number"
              android:layout_marginRight="8dp"
              />
      </RelativeLayout>
      <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:layout_marginTop="20dp"
         >
         <TextView
              android:id="@+id/std_t"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="right"
              style="@style/lottery_text"
              android:layout_marginLeft="8dp"
              android:text="@string/std_id"
               />
          <EditText 
              android:id="@+id/std_e"
              android:layout_marginLeft="5dp"
              android:layout_toRightOf="@id/std_t"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="phone"
              android:layout_marginRight="8dp"
              />
      </RelativeLayout>

      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="40dp"
          android:layout_marginRight="8dp"
          android:layout_marginLeft="8dp"
          android:textColor="@color/white"
          android:text="@string/submit"
          android:background="@drawable/title3"
           />

</LinearLayout>
